-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 Beta
-
-
0df8d83932a8cdc84bbf4dc7b31e2c1767a13844, 008d57e1d7c8208d5ac415db5a4bdd558688d638
compiling qt-5.5 against osx 10.8 sdk gives me the following error:
error 17-May-2015 11:33:25 /Volumes/build/bamboo-build/THIRDP-QT-BUILDMAC/qtmultimedia/src/plugins/avfoundation/camera/avfcamerautility.mm:62:25: error: property 'supportsVideoMaxFrameDuration' not found on object of type 'AVCaptureConnection *'; did you mean 'supportsVideoMinFrameDuration'? error 17-May-2015 11:33:25 if (videoConnection.supportsVideoMaxFrameDuration) { error 17-May-2015 11:33:25 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~ error 17-May-2015 11:33:25 supportsVideoMinFrameDuration error 17-May-2015 11:33:25 /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.8.sdk/System/Library/Frameworks/AVFoundation.framework/Headers/AVCaptureSession.h:949:78: note: 'supportsVideoMinFrameDuration' declared here error 17-May-2015 11:33:25 @property(nonatomic, readonly, getter=isVideoMinFrameDurationSupported) BOOL supportsVideoMinFrameDuration NS_AVAILABLE(10_7, 5_0); error 17-May-2015 11:33:25 ^ error 17-May-2015 11:33:25 /Volumes/build/bamboo-build/THIRDP-QT-BUILDMAC/qtmultimedia/src/plugins/avfoundation/camera/avfcamerautility.mm:63:46: error: property 'videoMaxFrameDuration' not found on object of type 'AVCaptureConnection *'; did you mean 'videoMinFrameDuration'? error 17-May-2015 11:33:25 const CMTime cmMax = videoConnection.videoMaxFrameDuration; error 17-May-2015 11:33:25 ^~~~~~~~~~~~~~~~~~~~~ error 17-May-2015 11:33:25 videoMinFrameDuration error 17-May-2015 11:33:25